added yahoo oidc provider

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
 </div>
 
 <div>
-  <button (click)="login()">Login</button>
+  <button (click)="login()">Login with google</button>
   <br>
   <button (click)="logout()">Logout</button>
 
@@ -33,4 +33,13 @@
 
   <br>
   <button (click)="createGmailLabel()">Create label</button>
+</div>
+
+<div>
+  <br>
+  <br>
+  <br>
+  <button (click)="loginWithYahoo()">Login with yahoo</button>
+  <br>
+  <button (click)="getFanatasyLeagues()">yahoo fanatasy sports - get leagues</button>
 </div>
