added gitlab oidc support

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,6 +35,18 @@
   <button (click)="createGmailLabel()">Create label</button>
 </div>
 
+
+<div>
+  <br>
+  <br>
+  <br>
+  <button (click)="loginWithGitlab()">Login with gitlab</button>
+  <br>
+  <button (click)="readGitLabUser()">Read Gitlab user info</button>
+  <br>
+  <button (click)="listGitlabProjects()">List Gitlab projects</button>
+</div>
+
 <div>
   <br>
   <br>
